@@ -6,7 +6,6 @@ import org.example.person.Person;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @NoArgsConstructor
 @Getter
@@ -14,7 +13,7 @@ public class PersonResponseDto {
     private UUID id;
     private String name;
     private String surname;
-    private int age;
+    private Integer age;
     private List<PetDto> pets;
 
     public PersonResponseDto(Person person) {
@@ -24,6 +23,6 @@ public class PersonResponseDto {
         this.age = person.getAge();
         this.pets = person.getPets().stream()
                 .map(PetDto::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
